# kobelwm

./: build.sh  meson.build
metadata/: meson.build
plugins/: meson.build
plugins/single_plugins/: meson.build
shell/: Cargo.toml  meson.build
shell/crates/: meson.build
shell/crates/kobel/: Cargo.toml  build.rs
shell/crates/kobel/src/: fps.rs  main.rs  state.rs
shell/crates/kobel/src/panel/: bar.rs  context_menu.rs  debug.rs  dock.rs  mod.rs  search.rs  wallpaper.rs
shell/crates/kobel/src/util/: debug.rs
shell/crates/kobel/src/widget/: k_button.rs  k_icon.rs  k_text.rs  mod.rs
shell/crates/kobel/src/widget/primitives/: button.rs  mod.rs
shell/plugins/: autostart.cpp  autostart.xml  meson.build
